fix responsive layout breakpoints

--- a/style.css
+++ b/style.css
@@ -1,20 +1,31 @@
-body {
-  margin: 0;
+* {
+  box-sizing: border-box;
+}
+
+html {
   font-family: "Rubik", sans-serif;
   font-size: 16px;
+}
+
+body {
+  margin: 0;
+
   max-width: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 main {
   margin: 0;
   display: grid;
-  grid-template: 1fr / 60% 1fr;
-  height: 100vh;
-  width: 100vw;
+  grid-template: 70% 30% / 100%;
+  min-height: 100vh;
+  width: 100%;
   background-color: hsl(270, 20%, 96%);
   overflow: hidden;
-  /* justify-content: center; */
+  align-items: center;
+  justify-items: center;
+  position: relative;
+  justify-content: center;
 }
 
 p {
@@ -24,7 +35,8 @@ p {
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+
+  align-items: center;
 }
 
 #left-container {
@@ -33,11 +45,10 @@ p {
 }
 
 #right-container {
-  width: 75%;
+  /* width: 75%; */
   /* justify-self: center; */
   text-align: center;
-  margin-left: -150px;
-  justify-self: flex-start;
+  width: 100%;
 }
 
 #left-background {
@@ -49,11 +60,14 @@ p {
   );
   background-position: left top;
   /* background-size: 55% 80%; */
-  height: 80%;
-  width: 35%;
+  height: 80vh;
+  width: 100%;
+  top: 0;
+  left: -50%;
   border-radius: 0 0 50% 50%;
   background-repeat: no-repeat;
-  margin-left: -5%;
+  /* margin-left: -5%; */
+  /* z-index: -1; */
 }
 
 #right-background {
@@ -65,19 +79,22 @@ p {
   );
   background-position: right bottom;
   /* background-size: 55% 80%; */
-  height: 90%;
-  width: 50%;
+  width: 100%;
+  top: 80vh;
+  bottom: 0;
+  right: -50%;
   border-radius: 50% 50% 0 0;
-  background-repeat: no-repeat;
-  margin-right: -20%;
+  /* background-repeat: no-repeat; */
+  /* margin-right: -20%; */
   align-self: flex-end;
   justify-self: flex-end;
   opacity: 0.05;
+  /* z-index: -1; */
 }
 
 #phone {
   display: flex;
-  margin-right: -100px;
+  /* margin-right: -100px; */
   width: 30%;
   min-width: 320px;
   height: 65%;
@@ -143,9 +160,16 @@ p {
 }
 
 #back-button {
+  /* margin-top: 0; */
+  /* margin-right: 5px; */
+  margin-left: 15px;
   color: white;
-  font-size: 16;
-  transform: translateY(10px);
+  height: 1rem;
+  /* width: 0.5rem; */
+  transform: scaleX(0.5);
+  /* font-size: 16; */
+  padding: 0.25rem;
+  /* transform: translateY(10px); */
 }
 
 #pic-name {
@@ -220,7 +244,7 @@ p {
 
 .payment-button {
   display: flex;
-  height: 4em;
+  height: 3rem;
   flex-direction: row;
   background-image: linear-gradient(
     to right,
@@ -232,7 +256,7 @@ p {
   /* padding: 5px; */
   width: 70%;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
   color: hsl(289, 100%, 72%);
   box-shadow: 1px 1px 5px 1px grey;
   font-size: 8;
@@ -240,17 +264,25 @@ p {
 
 .white-circle {
   border: 1px solid hsl(289, 100%, 72%);
-  height: 10px;
-  width: 10px;
+  height: 1rem;
+  width: 1rem;
   border-radius: 50%;
   margin-left: 15px;
+  margin-right: 0.25rem;
 }
 
 .money {
   color: white;
   font-weight: 800;
-  /* justify-self: flex-end; */
+  justify-self: flex-end;
   /* align-self: flex-end; */
+}
+
+.time-money-flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 
 #message {
@@ -265,7 +297,8 @@ p {
   justify-self: flex-end;
   height: 40px;
   width: 85%;
-  padding: 10px;
+  padding: 5px;
+  padding-right: 2px;
   margin: 10px;
   margin-top: 15px;
   box-shadow: 1px 1px 5px 1px grey;
@@ -302,21 +335,91 @@ button {
 }
 
 #booking-title {
-  text-align: left;
+  text-align: center;
   color: hsl(271, 36%, 24%);
   font-weight: 900;
-  font-size: 30px;
+  font-size: 2.7rem;
   margin-bottom: 15px;
-  margin-left: 3px;
+  margin-top: 0;
+
+  /* margin-left: 3px; */
+  padding: 3%;
+  padding-top: 0;
 }
 
 #dog-walker-text {
   color: hsl(270, 7%, 64%);
-  text-align: left;
+  text-align: center;
   width: 80%;
+  padding-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
-@media only screen and (max-width: 800px) {
+.attribution {
+  font-size: 11px;
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  /* margin-bottom: 3%; */
+  bottom: 1%;
+}
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
+
+@media (min-width: 800px) {
+  main {
+    grid-template: 1fr / 40% 60%;
+  }
+
+  #left-background {
+    height: 90vh;
+    width: 40%;
+    left: -10%;
+  }
+
+  #right-background {
+    top: 20vh;
+    width: 50%;
+    right: -25%;
+  }
+
+  #left-container {
+    margin-left: -150px;
+    justify-self: end;
+  }
+
+  #right-container {
+    width: 75%;
+    /* justify-self: center; */
+    text-align: center;
+    justify-self: start;
+    margin-left: 3rem;
+  }
+
+  .container {
+    justify-content: center;
+  }
+
+  #phone {
+    align-self: flex-end;
+  }
+
+  #booking-title {
+    width: 80%;
+    text-align: left;
+    padding-left: 0;
+    /* align-self: start; */
+  }
+
+  #dog-walker-text {
+    text-align: left;
+    line-height: 1.8rem;
+    padding-right: 3rem;
+    letter-spacing: 0.05rem;
+  }
+}
+/* @media only screen and (max-width: 800px) {
   main {
     grid-template: 1fr 1fr / 1fr;
   }
@@ -328,5 +431,5 @@ button {
   #left-background {
     position: absolute;
     background-size: 100% 100%;
-  }
-}
+  } */
+/* } */
